# optical-modem-ish

./: .gitattributes  .gitignore  .gitmessage.txt  .gitmodules  CLAUDE.md  LICENSE  README.md
.github/: CODEOWNERS  pull_request_template.md  pull_request_templates.md
.github/ISSUE_TEMPLATE/: bug.md  task.md
.github/workflows/: CI.yml  issue_label_guard.yml  kicad-pr-artifacts.yml  kicad-pr-guard.yml  kicad_pr_guardrails.yml  pr_template_gate.yml
docs/: bom_plan.md  bringup.md  cli.md  dev_process.md  kicad_git_workflow.md  kicad_llm_workflow.md  known_issues.md  log_format.md  parts.md  protocol.md  risks.md  spec.md  test_plan.md  wiring_v1.md  wiring_v2.md
docs/hw/: circuit_synth_policy.md  interface_contract.yml  nets.yml
docs/issue_intake/issue-27/: issue_intake.json  preflight_report.md
docs/prompt/: checkAC2pr.md  check_ac_by_codex.md
fw/: CMakeLists.txt  README.md
fw/apps/blink/: CMakeLists.txt  main.c
fw/apps/loopback/: CMakeLists.txt  main.c
fw/bringup_toggle_gp2/: bringup.md  main.py
github/temp_gh/: create_issue.md  pr.md  read_issues.md
hw/: hw.kicad_pro  hw.kicad_sch  hw_symbols.kicad_sym  step01_power.kicad_sch  sym-lib-table
sample_log/: example_per.csv
scripts/ci/: erc_changed_gate.sh  kicad_pr_guard.sh
scripts/kicad/: gen_evidence.ps1
tools/: README.md  pyproject.toml  requirements.txt  uf2conv.py  uf2families.json
